integrated event email with aastha and chen