@@ -2,8 +2,12 @@ package dev.forge.unifit.email;
 
 
 import dev.forge.unifit.booking.Booking;
+import dev.forge.unifit.event.Event;
+import dev.forge.unifit.facility.FacilityService;
+import dev.forge.unifit.user.UserService;
 import jakarta.mail.MessagingException;
 import jakarta.mail.internet.MimeMessage;
+import org.springframework.mail.SimpleMailMessage;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.stereotype.Service;
@@ -19,12 +23,47 @@ import java.util.Map;
 public class EmailService {
 
     private final JavaMailSender mailSender;
+    private final UserService userService;
 
     private final TemplateEngine templateEngine;
+    private final FacilityService facilityService;
 
-    public EmailService(JavaMailSender mailSender, TemplateEngine templateEngine) {
+    public EmailService(JavaMailSender mailSender, UserService userService, TemplateEngine templateEngine, FacilityService facilityService) {
         this.mailSender = mailSender;
+        this.userService = userService;
         this.templateEngine = templateEngine;
+        this.facilityService = facilityService;
+    }
+
+    public void sendEventNotification(Event event) throws MessagingException {
+
+        // Create email
+        MimeMessage message = mailSender.createMimeMessage();
+        MimeMessageHelper helper;
+
+        try {
+            helper = new MimeMessageHelper(message, true);
+        } catch (MessagingException e) {
+            throw new RuntimeException("MessageHelper could not be created", e);
+        }
+
+        List<String> recipients = userService.getAllUserEmailsExceptAdmin("admin@admin.com");
+        helper.setTo("pranavchand777@gmail.com");
+        helper.setSubject("UniFit Event - "+event.getEventName());
+        String facilityName = facilityService.getFacility(event.getFacility().getId()).getName();
+        // Prepare the context for the Thymeleaf template
+        Context context = new Context();
+
+        // Set the booking details and total price in the context
+        context.setVariable("event", event);
+        context.setVariable("facility", facilityName);
+
+        // Load and populate the Thymeleaf template
+        String htmlContent = templateEngine.process("event-email", context);
+        helper.setText(htmlContent, true);
+
+        // Send the email
+        mailSender.send(message);
     }
 
     public void sendBookingInvoice(List<Booking> bookings) throws MessagingException {
@@ -43,8 +82,8 @@ public class EmailService {
         }
 
         // Get the recipient email and customer name from the first booking
-        String recipientEmail = bookings.get(0).getUser().getEmail(); // Assuming User object has getEmail method
-        String customerName = bookings.get(0).getUser().getFirstName(); // Assuming User object has getFirstName method
+        String recipientEmail = bookings.getFirst().getUser().getEmail(); // Assuming User object has getEmail method
+        String customerName = bookings.getFirst().getUser().getFirstName(); // Assuming User object has getFirstName method
 
         helper.setTo(recipientEmail);
         helper.setSubject("Your UniFit Booking Invoice");
